WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139529
Copy and paste action menu items don't work on the Mozilla Midas demo in WebKit1
https://bugs.webkit.org/show_bug.cgi?id=139529
Summary
Copy and paste action menu items don't work on the Mozilla Midas demo in WebKit1
Tim Horton
Reported
2014-12-10 22:25:13 PST
Copy and paste action menu items don't work on the Mozilla Midas demo in WebKit1
Attachments
Patch
(1.86 KB, patch)
2014-12-10 22:26 PST
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-12-10 22:26:13 PST
Created
attachment 243105
[details]
Patch
Tim Horton
Comment 2
2014-12-10 22:32:38 PST
http://trac.webkit.org/changeset/177132
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug