Copy and paste action menu items don't work on the Mozilla Midas demo in WebKit1 https://bugs.webkit.org/show_bug.cgi?id=139529 <rdar://problem/19213620>

Reviewed by Beth Dakin.

* WebView/WebActionMenuController.mm:
(-[WebActionMenuController _copySelection:]):
(-[WebActionMenuController _paste:]):
Use the copy: and paste: methods on WebView so that we traverse subviews
when trying to respond, otherwise these actions don't work in subframes.


Canonical link: https://commits.webkit.org/157385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177132 268f45cc-cd09-0410-ab3c-d52691b4dbfc